# wal.rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
agent/: Cargo.toml
agent/src/: agent.rs  error.rs
api/: Cargo.toml  build.rs
api/proto/: log.v1.proto
api/src/: lib.rs
cfg/: Cargo.toml
cfg/src/: lib.rs
discovery/: Cargo.toml
discovery/src/: membership.rs
log/: Cargo.toml
log/src/: error.rs  index.rs  lib.rs  log.rs  replicator.rs  segment.rs  store.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs
test/: ca-csr.json  client-csr.json  server-csr.json
