[package]
name = "discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-skiplist = "0.1.3"
serde = { version = "1.0.225", features = ["derive"] }
serf = { version = "0.3", features = ["default", "tokio", "tcp", "serde"] }
tokio = { version = "1.0", features = ["sync", "rt", "signal", "time"] }
bincode = "1"
tracing = "0.1"
