[package]
name = "log"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
memmap2 = "0.9.5"
api = { path = "../api" }
prost = "0.13.5"
thiserror = "2.0.12"
cfg = { path = "../cfg" }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["sync", "rt"] }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.20.0"
