[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
cfg = { path = "../cfg" }
log = { path = "../log" }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tonic = { version = "0.13.1", features = ["transport", "_tls-any"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
rustls = { version = "0.23.0", features = ["ring"] }

[dev-dependencies]
tempfile = "3.20.0"
